// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordTextClassification renders properly 1`] = `
<div class="record">
  <div class="record--left">
    <recordinputs record="[object Object]"></recordinputs>
    <classifierexplorationarea dataset="[object Object]" record="[object Object]"></classifierexplorationarea>
    <!---->
  </div>
  <div class="record__labels"><svg version="1.1" viewBox="0 0 40 40" class="svg-icon svg-fill icon__predicted ok" style="width: 40px; height: 40px;">
      <path pid="0" d="M17.604 25.882l-5.786-5.785 1.929-1.929 3.857 3.857 7.713-7.713 1.929 1.928-9.642 9.642z" _fill="#000"></path>
      <path pid="1" fill-rule="evenodd" clip-rule="evenodd" d="M5 20c0-8.284 6.716-15 15-15 8.284 0 15 6.716 15 15 0 8.284-6.716 15-15 15-8.284 0-15-6.716-15-15zm15 12.273c-6.778 0-12.273-5.495-12.273-12.273S13.222 7.727 20 7.727 32.273 13.222 32.273 20 26.778 32.273 20 32.273z" _fill="#000"></path>
    </svg>
    <re-tag name="Test"></re-tag>
  </div>
</div>
`;

exports[`RecordTextClassification renders with empty prediction correctly 1`] = `
<div class="record">
  <div class="record--left">
    <recordinputs record="[object Object]"></recordinputs>
    <classifierexplorationarea dataset="[object Object]" record="[object Object]"></classifierexplorationarea>
    <!---->
  </div>
  <div class="record__labels">
    <!---->
  </div>
</div>
`;
